Add support for fanout resolvers and transformer resolvers. Refactor code and move classes to appropriate packages. THIS IS A BREAKING CHANGE